--- a/sass/components/_main.scss
+++ b/sass/components/_main.scss
@@ -31,21 +31,15 @@ h1 {
     font-weight: 700;
 }
 
-.sheep {
-    font-size: 120px;
-}
 
 .cloud {
     font-size: 99px;
     color: $white;
     text-align: center;
-    padding: 0;
-}
-
-.cloud-bunch {
-	position: relative;
+    position: relative;
 	padding: 0.9em;
 }
+
 
 .cloud-1 {
 	position: absolute;
@@ -75,35 +69,36 @@ h1 {
 }
 
 .star-bunch {
-    color: #EECC00;
+    color: $yellow;
     padding-top: .3em;
     margin: none;
     font-size: 100px;
     text-align: center;
+        .star-1 {
+            animation: box-scale 10s ease-in-out infinite;
+        }
+        .star-2 {
+            animation: box-scale 7s ease-in-out infinite;
+        }
+        .star-3 {
+            animation: box-scale 8.5s ease-in-out infinite;
+        }
 }
-
-.star-1 {
-    -webkit-animation: box-scale 10s ease-in-out infinite;
-    animation: box-scale 10s ease-in-out infinite;
-}
-
-.star-2 {
-    -webkit-animation: box-scale 7s ease-in-out infinite;
-    animation: box-scale 7s ease-in-out infinite;
-}
-
-.star-3 {
-    -webkit-animation: box-scale 8.5s ease-in-out infinite;
-    animation: box-scale 8.5s ease-in-out infinite;
-}
-
 
  .sheep-colony {
-    color: #fff;
+    color: $white;
     padding-top: .5em;
     margin: none;
-    font-size: 110px;
-     text-align: center;
+    text-align: center;
+    font-size: 120px;
+
+}
+
+
+
+@keyframes box-rotate-1 {
+    from { transform: rotate(-10deg); }
+    to { transform: rotate(10deg); }    
 }
 
 .sheep-1 {
@@ -111,58 +106,34 @@ h1 {
     animation: box-rotate-1 3s ease-in-out infinite alternate;
 }
 
+@keyframes box-rotate-2 {
+    from { transform: rotate(10deg); }
+    to { transform: rotate(-10deg); }    
+}
+
 .sheep-2 {
     -webkit-animation: box-rotate-1 3s ease-in-out infinite alternate;
     animation: box-rotate-2 3s ease-in-out infinite alternate;
 }
     
-  
- @-webkit-keyframes box-rotate-1 {
-    0% {
-        -webkit-transform: rotate(-10deg);
-    }
-    100% {
-        -webkit-transform: rotate(10deg);
-    }
-}  
 
-@keyframes box-rotate-1 {
-    0% {
-        transform: rotate(-10deg);
-    }
-    100% {
-        transform: rotate(10deg);
-    }
-}
+
+
+
+
+
+  
+ 
+
+
 
 
     
-@-webkit-keyframes box-rotate-2 {
-    0% {
-        -webkit-transform: rotate(10deg);
-    }
-    100% {
-        -webkit-transform: rotate(-10deg);
-    }
-}
 
-@keyframes box-rotate-2 {
-    0% {
-        transform: rotate(10deg);
-    }
-    100% {
-        transform: rotate(-10deg);
-    }
-}
 
-@-webkit-keyframes box-scale {
-    0% {
-        -webkit-transform: scale(1, 1);
-    }
-    50% {
-        -webkit-transform: scale(2, 2);
-    }
-}
+
+
+
 
 @keyframes box-scale {
     0% {
@@ -174,17 +145,16 @@ h1 {
 }
 
 
-@-webkit-keyframes cloud-1 {
 
-	0% {
-		-webkit-transform: translateX(0px);
-	}
 
-	100% {
-		-webkit-transform: translateX(5px);
-	}
 
-}
+
+
+
+
+
+
+
 
 @keyframes cloud-1 {
 
@@ -198,17 +168,7 @@ h1 {
 
 }
 
-@-webkit-keyframes cloud-2 {
 
-	0% {
-		-webkit-transform: translateX(5px);
-	}
-
-	100% {
-		-webkit-transform: translateX(0px);
-	}
-
-}
 
 @keyframes cloud-2 {
 
@@ -222,17 +182,7 @@ h1 {
 
 }
 
-@-webkit-keyframes cloud-3 {
 
-	0% {
-		-webkit-transform: translateX(0px);
-	}
-
-	100% {
-		-webkit-transform: translateX(5px);
-	}
-
-}
 
 @keyframes cloud-3 {
 
@@ -245,6 +195,23 @@ h1 {
 	}
 
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media only screen and (min-width: 38em) {
     
