--- a/sass/components/_main.scss
+++ b/sass/components/_main.scss
@@ -72,7 +72,7 @@ h1 {
 		              right: 17%
                 }
                 @media only screen and (min-width: 60em) {
-		              right: 27%
+		              left: 27%
 	           }
         }
 
