--- a/css/_style.css
+++ b/css/_style.css
@@ -68,6 +68,7 @@ h1 {
   text-align: center;
   top: 2.5em;
   padding-bottom: 1.5em;
+  margin: 0;
 }
 
 @media only screen and (min-width: 38em) {
@@ -135,13 +136,14 @@ h1 {
 
 .star-bunch {
   color: #EECC00;
-  margin: none;
-  font-size: 100px;
+  margin: auto;
+  font-size: 50px;
   text-align: center;
 }
 
 .star-bunch .star-1 {
   animation: box-scale 10s ease-in-out infinite;
+  text-align: center;
 }
 
 .star-bunch .star-2 {
@@ -155,7 +157,6 @@ h1 {
 @media only screen and (min-width: 38em) {
   .star-bunch {
     padding-top: .3em;
-    font-size: 140px;
     margin: none;
   }
 }
@@ -244,5 +245,3 @@ h1 {
     transform: translateX(5px);
   }
 }
-
-/*# sourceMappingURL=_style.css.map */
