--- a/sass/components/_main.scss
+++ b/sass/components/_main.scss
@@ -45,6 +45,7 @@ h1 {
     text-align: center;
 	top: 2.5em;
     padding-bottom: 1.5em;
+    margin: 0;
        @media only screen and (min-width: 38em) {
 		  padding: 0.9em;
         }
@@ -92,11 +93,12 @@ h1 {
 
 .star-bunch {
     color: $yellow;
-    margin: none;
-    font-size: 100px;
+    margin: auto;
+    font-size: 50px;
     text-align: center;
         .star-1 {
             animation: box-scale 10s ease-in-out infinite;
+            text-align: center;
         }
         .star-2 {
             animation: box-scale 7s ease-in-out infinite;
@@ -106,7 +108,6 @@ h1 {
         }
         @media only screen and (min-width: 38em) {
 		padding-top: .3em;
-        font-size: 140px;
         margin: none;
 	   }
 	   @media only screen and (min-width: 60em) {
