feat:(css) trial one spacing

--- a/sass/components/_main.scss
+++ b/sass/components/_main.scss
@@ -91,9 +91,14 @@ h1 {
         }  
 }
 
+.center {
+    text-align: center;
+}
+
 .star-bunch {
     color: $yellow;
-    margin: auto;
+    margin-left: none;
+    margin-right: none;
     font-size: 50px;
     text-align: center;
         .star-1 {
