--- a/css/_style.css
+++ b/css/_style.css
@@ -134,9 +134,14 @@ h1 {
   }
 }
 
+.center {
+  text-align: center;
+}
+
 .star-bunch {
   color: #EECC00;
-  margin: auto;
+  margin-left: none;
+  margin-right: none;
   font-size: 50px;
   text-align: center;
 }
